# MeiseCSI

./: README.md  pyproject.toml
notebooks/: MAD_run.ipynb  Welcome.ipynb  cms4csi.ipynb  element_analysis.ipynb  fragment_analysis.ipynb  particle_size_analysis.py
notebooks/data/: 300mg_random_coffee.csv  coffee_samples.csv  md_coffee_beans.csv
notebooks/data/icpoes/: roasted_coffees_QC.csv
notebooks/data/mad/: 85000797_DSK0761_2.csv  cleaning_run.csv  runs_metadata.csv
rice/: Pulumi.dev.yaml  __main__.py
rice/con/: Dockerfile  docker-compose.yml
rice/iac/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
src/mbg/csi/: __init__.py  tasks.py  utils.py
src/mbg/csi/static/css/: base.css
src/mbg/csi/templates/: index.html
src/mbg/csi/templates/csi/: index.html
src/mbg/csi/templates/documentation/: protocol.html  protocols.html
src/mbg/csi/templates/services/: index.html
